landing jobs: add ability to cancel landing jobs (bug 1503000) (#107)
- add REST endpoint (update)
- update landing job actions enum
- add grace period functionality
